--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,9 @@
 @theme {
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --breakpoint-xs: 500px;
+  --breakpoint-xxs: 400px;
+  --breakpoint-xxxs: 300px;
 }
 
 :root {
@@ -18,7 +21,8 @@
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  color: black;
+  background: white;
+  /* background: var(--background); */
   font-family: Arial, Helvetica, sans-serif;
 }
